--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="appewtc.masterung.whereltc.MainActivity">
+    tools:context="appewtc.masterung.whereltc.MainActivity"
+    android:background="@drawable/bg0">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="50dp"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:background="#82ffffff">
 
         <ImageView
             android:layout_width="match_parent"
@@ -30,7 +32,9 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/editText4"
-            android:hint="User" />
+            android:hint="User :"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/background_light" />
 
         <EditText
             android:layout_width="match_parent"
@@ -38,7 +42,9 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/editText5"
-            android:hint="password" />
+            android:hint="password :"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/background_light" />
     </LinearLayout>
 
     <LinearLayout
