--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
             android:text="Sign In"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="clickSignin"
             android:id="@+id/button"
             android:layout_weight="1" />
 
